# dynamic_framework

./: BufferInputOutputStream.h  CMakeLists.txt  Config.cpp  Config.h  Controller.cpp  Controller.h  ControllerDebug.cpp  Framework.cpp  Framework.h  FrameworkDebug.cpp  Main.cpp  Module.h  ModuleLoader.h  ModuleTemplate.h  Node.h  ObjectInput.h  ObjectInputStream.h  ObjectOutput.h  ObjectOutputStream.h  README.md  Representation.h  RepresentationCloneable.h  RepresentationPointer.h  RepresentationProvider.h  RepresentationRequierer.h  RepresentationTemplate.h  RepresentationUser.h  SerialPort.cpp  SerialPort.h  Serializable.h  Template.h  Thread.h  TivaCTestModule.cpp  TivaCTestModule.h  Vector.h  configure  dynamic_framework.ino  framework.ino  fwx_main.cpp
examples/mod/: Test1Mod.cpp  Test1Mod.h  Test2Mod.h  Test3Mod.cpp
mod/: Test1Mod.cpp  Test2Mod.cpp  Test3Mod.cpp  Test3Mod.h
rep/: Test1Rep.h  Test2Rep.h  Test3Rep.h
